(#1095) Patches to fix rounded searchbox on iOS
Closes #1095

--- a/packages/ncids-css/packages/nci-autocomplete/internal/_nci-autocomplete.scss
+++ b/packages/ncids-css/packages/nci-autocomplete/internal/_nci-autocomplete.scss
@@ -7,6 +7,12 @@
 	@include u-width('full');
 	@include u-font('ui', 5);
 	@include u-line-height('ui', 4);
+	[type="search"] {
+		@include u-border(1px);
+		@include u-border('solid');
+		@include u-radius('sm');
+		border-color: color('gray-50');
+	}
 
 	// autocomplete listbox
 	&__listbox {
